@@ -179,6 +179,11 @@ static void parse_args(int argc, char **_Nonnull argv, struct CONTAINER *_Nonnul
 			show_examples();
 			exit(EXIT_SUCCESS);
 		}
+		// Show neofeth-like ruri version info.
+		if (strcmp(argv[index], "-F") == 0 || strcmp(argv[index], "--ruri-fetch") == 0) {
+			ruri_fetch();
+			exit(EXIT_SUCCESS);
+		}
 		// Umount a container.
 		if (strcmp(argv[index], "-U") == 0 || strcmp(argv[index], "--umount") == 0) {
 			index += 1;
